--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sensive Blog - Home</title>
+  <title>ProjectWithLove Blog - Home</title>
 	<link rel="icon" href="img/Fevicon.png" type="image/png">
 
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -63,9 +63,9 @@
       <div class="container">
         <div class="hero-banner">
           <div class="hero-banner__content">
-            <h3>Tours & Travels</h3>
-            <h1>Amazing Places on earth</h1>
-            <h4>December 12, 2018</h4>
+            <h3>Путешествия - это не мечта</h3>
+            <h1>Эх, вот бы автомат...</h1>
+            <h4>Здравствуйте, Денис Сергеевич!</h4>
           </div>
         </div>
       </div>
