--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right navbar-social">
               <li><a href="#"><i class="ti-facebook"></i></a></li>
-              <li><a class="navbar-brand logo_h" href="index.html"><img src="img/vk.png" width="13" height="13" alt=""></a></li>
+              <li><a href="#"><img src="img/vk.png" width="13" height="13" alt=""></a></li>
               <li><a href="#"><i class="ti-instagram"></i></a></li>
               <li><a href="#"><i class="ti-skype"></i></a></li>
             </ul>
