--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
               <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right navbar-social">
-              <li><a href="#"><i class="ti-facebook"></i></a></li>
-              <li><a href="#"><img src="img/vk.png" width="13" height="13" alt=""></a></li>
+              <li><li><a href="https://vk.com/id1"><img src="img/vk.png" width="13" height="13" alt=""></a></li></li>
+              <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
               <li><a href="#"><i class="ti-instagram"></i></a></li>
               <li><a href="#"><i class="ti-skype"></i></a></li>
             </ul>
@@ -455,9 +455,7 @@
             <h6>Follow Us</h6>
             <p>Let us be social</p>
             <div class="footer-social d-flex align-items-center">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
+              <a href="https://vk.com/id1"><img src="img/vk.png" width="13" height="13" alt=""></a>
               <a href="#">
                 <i class="fab fa-twitter"></i>
               </a>
