--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="hero-banner">
           <div class="hero-banner__content">
             <h3>Путешествия - это не мечта</h3>
-            <h1>Эх, вот бы автомат...</h1>
+            <h1>А вот автомат...</h1>
             <h4>Здравствуйте, Денис Сергеевич!</h4>
           </div>
         </div>
