--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
             <h3>Путешествия - это не мечта</h3>
             <h1>А вот автомат...</h1>
             <h4>Здравствуйте, Денис Сергеевич!</h4>
+
+            <div class="player">
+              <audio id="player2" preload="none" controls style="max-width: 100%">
+                <source src="http://www.largesound.com/ashborytour/sound/AshboryBYU.mp3" type="audio/mp3">
+              </audio>
+            </div>
           </div>
         </div>
       </div>
