--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide1.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="/blog-details">Fashion</a>
+              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -91,8 +91,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide2.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="/blog-details">Fashion</a>
+              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -101,8 +101,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide3.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="/blog-details">Fashion</a>
+              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -111,8 +111,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide1.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="/blog-details">Fashion</a>
+              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -121,8 +121,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide2.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="/blog-details">Fashion</a>
+              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -131,8 +131,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide3.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="/blog-details">Fashion</a>
+              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -160,9 +160,9 @@
                   <h3>Woman claims husband wants to name baby girl
                     after his ex-lover sparking.</h3>
                 </a>
-                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="#">fashion</a></p>
+                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
                 <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
-                <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                <a class="button" href="/blog-details">Read More <i class="ti-arrow-right"></i></a>
               </div>
             </div>
 
@@ -180,9 +180,9 @@
                   <h3>Woman claims husband wants to name baby girl
                     after his ex-lover sparking.</h3>
                 </a>
-                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="#">fashion</a></p>
+                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
                 <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
-                <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                <a class="button" href="/blog-details">Read More <i class="ti-arrow-right"></i></a>
               </div>
             </div>
 
@@ -200,9 +200,9 @@
                   <h3>Tourist deaths in Costa Rica jeopardize safe dest
                     ination reputation all time. </h3>
                 </a>
-                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="#">fashion</a></p>
+                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
                 <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
-                <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                <a class="button" href="/blog-details">Read More <i class="ti-arrow-right"></i></a>
               </div>
             </div>
 
@@ -220,9 +220,9 @@
                   <h3>Tourist deaths in Costa Rica jeopardize safe dest
                     ination reputation all time.  </h3>
                 </a>
-                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="#">fashion</a></p>
+                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
                 <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
-                <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                <a class="button" href="/blog-details">Read More <i class="ti-arrow-right"></i></a>
               </div>
             </div>
 
