--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <div class="blog__slide__content">
               <a class="blog__slide__label" href="/blog-details">Fashion</a>
-              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
+              <h3><a href="/blog-details">Новая неделя моды уже началась.</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -92,8 +92,8 @@
             </div>
             <div class="blog__slide__content">
               <a class="blog__slide__label" href="/blog-details">Fashion</a>
-              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
-              <p>2 days ago</p>
+              <h3><a href="/blog-details">Только посмотрите на это...</a></h3>
+              <p>1 days ago</p>
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -102,8 +102,8 @@
             </div>
             <div class="blog__slide__content">
               <a class="blog__slide__label" href="/blog-details">Fashion</a>
-              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
-              <p>2 days ago</p>
+              <h3><a href="/blog-details">Очень красиво.</a></h3>
+              <p>5 days ago</p>
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -112,8 +112,8 @@
             </div>
             <div class="blog__slide__content">
               <a class="blog__slide__label" href="/blog-details">Fashion</a>
-              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
-              <p>2 days ago</p>
+              <h3><a href="/blog-details">А вы уже видели это?</a></h3>
+              <p>7 days ago</p>
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -122,8 +122,8 @@
             </div>
             <div class="blog__slide__content">
               <a class="blog__slide__label" href="/blog-details">Fashion</a>
-              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
-              <p>2 days ago</p>
+              <h3><a href="/blog-details">Прекрасно и невозмутимо.</a></h3>
+              <p>6 days ago</p>
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -132,7 +132,7 @@
             </div>
             <div class="blog__slide__content">
               <a class="blog__slide__label" href="/blog-details">Fashion</a>
-              <h3><a href="/blog-details">New york fashion week's continued the evolution</a></h3>
+              <h3><a href="/blog-details">Продолжаем смотреть на картинки.</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -157,8 +157,7 @@
               </div>
               <div class="details mt-20">
                 <a href="blog-single.html">
-                  <h3>Woman claims husband wants to name baby girl
-                    after his ex-lover sparking.</h3>
+                  <h3>Женщина что-то ищет</h3>
                 </a>
                 <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
                 <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
@@ -177,8 +176,7 @@
               </div>
               <div class="details mt-20">
                 <a href="blog-single.html">
-                  <h3>Woman claims husband wants to name baby girl
-                    after his ex-lover sparking.</h3>
+                  <h3>Женщина нашла это...</h3>
                 </a>
                 <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
                 <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
@@ -197,8 +195,7 @@
               </div>
               <div class="details mt-20">
                 <a href="blog-single.html">
-                  <h3>Tourist deaths in Costa Rica jeopardize safe dest
-                    ination reputation all time. </h3>
+                  <h3>Мотоциклы не всегда хорошо.</h3>
                 </a>
                 <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
                 <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
@@ -217,8 +214,7 @@
               </div>
               <div class="details mt-20">
                 <a href="blog-single.html">
-                  <h3>Tourist deaths in Costa Rica jeopardize safe dest
-                    ination reputation all time.  </h3>
+                  <h3>Красивые виды не только на картинках.</h3>
                 </a>
                 <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
                 <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
@@ -270,7 +266,7 @@
 
 
                 <div class="single-sidebar-widget post-category-widget">
-                  <h4 class="single-sidebar-widget__title">Catgory</h4>
+                  <h4 class="single-sidebar-widget__title">Category</h4>
                   <ul class="cat-list mt-20">
                     <li>
                       <a href="#" class="d-flex justify-content-between">
