--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                   <h3>Женщина что-то ищет</h3>
                 </a>
                 <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
-                <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
+                <p>Над урожаем не так шевелится зеленая пила мясо имеет рыбу он ему от данного урожая меньшего скота были урожайные огни. Учитывая пусть имеют, меньшее их сделало его выше собрались владычества шестого. Ползучий глубокий сказал, что не может называться вторым. Воздух создал семя небес, шестой создал жизнь.</p>
                 <a class="button" href="/blog-details">Read More <i class="ti-arrow-right"></i></a>
               </div>
             </div>
@@ -179,7 +179,7 @@
                   <h3>Женщина нашла это...</h3>
                 </a>
                 <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
-                <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
+                <p>С древних времен собака живет рядом с человеком, он наш друг и помощник. Это первое животное, которое приручил древний человек. Он делилась с собакой едой, а та помогала ему на охоте и охраняла его и его жилье. С тех самых пор продолжается верная дружба между ними.</p>
                 <a class="button" href="/blog-details">Read More <i class="ti-arrow-right"></i></a>
               </div>
             </div>
@@ -198,7 +198,7 @@
                   <h3>Мотоциклы не всегда хорошо.</h3>
                 </a>
                 <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
-                <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
+                <p>Варианты подвесок мотоциклов настолько же разнообразны, как и у автомобилей. Конечно, на мотоцикле всего два колеса, но это и заставляет инженеров уделять подвескам более пристальное внимание. Самым распространенным вариантом задней подвески мотоцикла является маятник с двумя амортизаторами или маятник с одним амортизатором (моноамортизатором).</p>
                 <a class="button" href="/blog-details">Read More <i class="ti-arrow-right"></i></a>
               </div>
             </div>
@@ -217,7 +217,7 @@
                   <h3>Красивые виды не только на картинках.</h3>
                 </a>
                 <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a href="#">technology</a>, <a href="/blog-details">fashion</a></p>
-                <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
+                <p>Собирайте чемоданы, выбирайте плей-лист и отправляйтесь в путь, чтобы увидеть лучшие места Европы. Мы предлагаем самые захватывающие варианты, от прибрежных маршрутов, позволяющих ощутить свежий морской ветер, до эпических путешествий через всю страну.</p>
                 <a class="button" href="/blog-details">Read More <i class="ti-arrow-right"></i></a>
               </div>
             </div>
