--- a/index.html
+++ b/index.html
@@ -355,28 +355,28 @@
                     <h4 class="single-sidebar-widget__title">Popular Post</h4>
                     <ul class="list">
                       <li>
-                          <a href="#">project</a>
+                          <a href="/blog-details.html">project</a>
                       </li>
                       <li>
-                          <a href="#">love</a>
+                          <a href="/blog-details.html">love</a>
                       </li>
                       <li>
-                          <a href="#">technology</a>
+                          <a href="/blog-details.html">technology</a>
                       </li>
                       <li>
-                          <a href="#">travel</a>
+                          <a href="/blog-details.html">travel</a>
                       </li>
                       <li>
-                          <a href="#">software</a>
+                          <a href="/blog-details.html">software</a>
                       </li>
                       <li>
-                          <a href="#">life style</a>
+                          <a href="/blog-details.html">life style</a>
                       </li>
                       <li>
-                          <a href="#">design</a>
+                          <a href="/blog-details.html">design</a>
                       </li>
                       <li>
-                          <a href="#">illustration</a>
+                          <a href="/blog-details.html">illustration</a>
                       </li>
                     </ul>
                   </div>
@@ -466,7 +466,7 @@
       </div>
       <div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
         <p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="#" target="_blank">Kuzmin Anton BI-20</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
       </div>
     </div>
