--- a/contact.html
+++ b/contact.html
@@ -113,22 +113,22 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3>California United States</h3>
-              <p>Santa monica bullevard</p>
+              <h3>Финансовый университет</h3>
+              <p>Рязанский проспект</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-headphone"></i></span>
             <div class="media-body">
-              <h3><a href="tel:454545654">00 (440) 9865 562</a></h3>
-              <p>Mon to Fri 9am to 6pm</p>
+              <h3><a href="#">Надеюсь вам понравилось!</a></h3>
+              <p>Сегодня хорошая погода.</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3><a href="mailto:support@colorlib.com">support@colorlib.com</a></h3>
-              <p>Send us your query anytime!</p>
+              <h3><a href="mailto:support@colorlib.com">onkeep67@gmail.com</a></h3>
+              <p>Можете мне написать)</p>
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
               </div>
             </div>
             <div class="form-group text-center text-md-right mt-3">
-              <button type="submit" class="button button--active button-contactForm">Send Message</button>
+              <div type="submit" class="button button--active button-contactForm">Send Message</div>
             </div>
           </form>
         </div>
@@ -242,7 +242,7 @@
       </div>
       <div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
         <p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="#" target="_blank">Kuzmin Anton BI-20</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
       </div>
     </div>
