--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
               <div class="thumb">
                 <img class="img-fluid" src="img/blog/blog1.png" alt="">
                 <ul class="thumb-info">
-                  <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                  <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
+                  <li><a href="/blog-details"><i class="ti-user"></i>Leya</a></li>
+                  <li><a href="/blog-details"><i class="ti-notepad"></i>January 12,2019</a></li>
+                  <li><a href="/blog-details"><i class="ti-themify-favicon"></i>2 Comments</a></li>
                 </ul>
               </div>
               <div class="details mt-20">
@@ -169,9 +169,9 @@
               <div class="thumb">
                 <img class="img-fluid" src="img/blog/blog2.png" alt="">
                 <ul class="thumb-info">
-                  <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                  <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
+                  <li><a href="/blog-details"><i class="ti-user"></i>Borya</a></li>
+                  <li><a href="/blog-details"><i class="ti-notepad"></i>January 12,2019</a></li>
+                  <li><a href="/blog-details"><i class="ti-themify-favicon"></i>2 Comments</a></li>
                 </ul>
               </div>
               <div class="details mt-20">
@@ -188,9 +188,9 @@
               <div class="thumb">
                 <img class="img-fluid" src="img/blog/blog3.png" alt="">
                 <ul class="thumb-info">
-                  <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                  <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
+                  <li><a href="/blog-details"><i class="ti-user"></i>Nort</a></li>
+                  <li><a href="/blog-details"><i class="ti-notepad"></i>January 1,2019</a></li>
+                  <li><a href="/blog-details"><i class="ti-themify-favicon"></i>2 Comments</a></li>
                 </ul>
               </div>
               <div class="details mt-20">
@@ -207,9 +207,9 @@
               <div class="thumb">
                 <img class="img-fluid" src="img/blog/blog4.png" alt="">
                 <ul class="thumb-info">
-                  <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                  <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
+                  <li><a href="/blog-details"><i class="ti-user"></i>Port</a></li>
+                  <li><a href="/blog-details"><i class="ti-notepad"></i>January 9,2019</a></li>
+                  <li><a href="/blog-details"><i class="ti-themify-favicon"></i>2 Comments</a></li>
                 </ul>
               </div>
               <div class="details mt-20">
