--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div class="hero-banner">
           <div class="hero-banner__content">
             <h3>Путешествия - это не мечта</h3>
-            <h1>А вот автомат...</h1>
-            <h4>Здравствуйте, Денис Сергеевич!</h4>
+            <h1>А вот солнце...</h1>
+            <h4>Здравствуй, Посетитель сайта!</h4>
           </div>
         </div>
       </div>
